<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/preferences">


    <PreferenceCategory app:title="Map Data">
        <ListPreference
            app:title="Select Map Data Type"
            app:key="@string/set_data_type"
            app:defaultValue="canopy_height_model"
            app:entries="@array/data_type_entries"
            app:entryValues="@array/data_type_values"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/set_data_type_icon"/>

        <Preference
            android:title="Data Filters"
            android:key="@string/filter_data"
            android:summary="Specify a range of filter values"
            android:icon="@drawable/filter_data_icon"/>
    </PreferenceCategory>


    <PreferenceCategory app:title="Map Locations">
        <Preference
            android:title="Region of Interest"
            android:key="@string/set_roi"
            android:summary="Set the location that can be downloaded"
            android:icon="@drawable/set_roi_icon"/>

        <ListPreference
            app:title="Default Center Location"
            app:key="@string/set_default_center_loc"
            app:defaultValue="device_location"
            app:entries="@array/center_loc_entries"
            app:entryValues="@array/center_loc_values"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/set_default_center_loc_icon"/>
    </PreferenceCategory>


    <PreferenceCategory app:title="Offline Maps">
        <Preference
            android:title="Download Region of Interest"
            android:key="@string/download_roi"
            android:summary="Store limited maps for offline use"
            android:icon="@drawable/download_roi_icon"/>

        <SwitchPreferenceCompat
            app:title="Offline Mode"
            android:key="@string/enable_offline_mode"
            app:summaryOff="Currently uses online maps"
            app:summaryOn="Currently uses offline maps"
            android:icon="@drawable/offline_mode_icon"/>

        <Preference
            android:title="Delete Downloaded Data"
            android:key="@string/delete_downloaded_roi"
            android:summary="Remove downloaded maps"
            android:icon="@drawable/delete_downloaded_roi_icon" />
    </PreferenceCategory>


    <PreferenceCategory app:title="Additional Information">
        <Preference
            android:title="About Biomapper"
            android:key="@string/open_about_page"
            android:summary="App guide and background"
            android:icon="@drawable/about_page_icon"/>
    </PreferenceCategory>


</PreferenceScreen>

    <!-- OTHER PREFERENCES TYPES NOT CURRENTLY USED -->

    <!--<CheckBoxPreference
        android:key="checkbox1"
        android:summaryOff="Description of checkbox 1 off"
        android:summaryOn="Description of checkbox 1 on"
        android:title="CheckBox 1"
        app:dependency="offline_mode">
    </CheckBoxPreference> -->

    <!--<EditTextPreference
        app:key="textInput"
        app:title="Title of Text Preference"
        app:useSimpleSummaryProvider="true" /> -->

    <!--<MultiSelectListPreference
            android:title="Remove Data Filter"
            android:key="@string/remove_filter"
            android:summary="Choose which filters to remove"
            app:entries="@array/data_type_entries"
            app:entryValues="@array/data_type_values"
            android:positiveButtonText = "delete"
            android:icon="@drawable/remove_filter_icon">
        </MultiSelectListPreference>-->