<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_page"
    android:tag="about_page"
    tools:context=".AboutPage"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_page_toolbar"
        app:title="@string/about_page_toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        app:titleTextColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/app_description"
        android:text="@string/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/app_instructions"
        android:text="@string/app_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"/>
</LinearLayout>