<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/download_manager"
    android:tag="download_manager"
    tools:context=".DownloadManager"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/download_manager_toolbar"
        app:title="@string/download_manager_toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        app:titleTextColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/download_description"
        android:text="@string/download_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"/>

    <CheckBox android:id="@+id/chm_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canopy_height_model"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />
    <CheckBox android:id="@+id/dem_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digital_elevation_model"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />
    <CheckBox android:id="@+id/agb_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/above_ground_biomass"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/radius_header"
        android:text="@string/radius_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/radius_edit_text"
        android:digits="0123456789"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="5"
        android:minHeight="48dp"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/size_estimate"
        android:text="@string/size_estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:minHeight="48dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start|bottom">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Begin Download" />

            <ImageButton
                android:id="@+id/begin_download"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|bottom"
                android:scaleType="centerCrop"
                android:src="@drawable/accept_button_img"
                android:minHeight="48dp"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end|bottom">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Delete downloads"
                android:gravity="center" />

            <ImageButton
                android:id="@+id/cancel_download"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|bottom"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/cancel_button_img"
                android:minHeight="48dp"
                android:background="@null" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
