<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dataFilterManager"
    android:tag="data_filter_manager"
    tools:context=".FilterManager"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dataFilterToolbar"
        app:title="@string/data_filter_toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        app:titleTextColor="?attr/colorOnPrimary" />

    <Spinner
        android:id="@+id/dataTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/data_type_entries"
        android:entryValues="@array/data_type_values"/>
    <TextView
        android:id="@+id/dataTypeRange"
        android:text="@string/chm_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/minText"
        android:text="Minimum Value:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/minEditText"
        android:digits="0123456789"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="5"
        android:minHeight="48dp"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/maxText"
        android:text="Maximum Value:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/maxEditText"
        android:digits="0123456789"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:ems="5"
        android:minHeight="48dp"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/filterInstructions"
        android:text="@string/filter_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:minHeight="48dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start|bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Apply Filter" />

            <ImageButton
                android:id="@+id/apply_filter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|bottom"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/accept_button_img"
                android:minHeight="48dp"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end|bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Clear Filter"
                android:gravity="center"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/clear_filter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|bottom"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/cancel_button_img"
                android:minHeight="48dp"
                android:background="@null" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
